--- a/src/public/css/item-detail.css
+++ b/src/public/css/item-detail.css
@@ -47,33 +47,6 @@
     color: #777;
 }
 
-.item-detail__actions {
-    display: flex;
-    align-items: center;
-    gap: 40px;
-    margin-left: 30px;
-    margin-bottom: 4px;
-}
-
-.action-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 4px;
-}
-
-.favorite-icon,
-.comment-icon {
-    width: 30px;
-    height: 30px;
-}
-
-.favorite-count,
-.comment-count {
-    font-size: 16px;
-    color: #333;
-}
-
 .item-detail__buy-button {
     width: 100%;
     display: inline-block;
@@ -171,4 +144,46 @@
     height: 180px;
     margin-bottom: 14px;
     padding: 8px;
+}
+
+.item-detail__actions {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    margin-left: 30px;
+    margin-bottom: 4px;
+}
+
+.action-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
+}
+
+.action-item form {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+}
+
+.favorite-btn {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+}
+
+.favorite-icon,
+.comment-icon {
+    width: 30px;
+    height: 30px;
+}
+
+.favorite-count,
+.comment-count {
+    font-size: 16px;
+    color: #333;
 }
