--- a/src/public/css/item-list.css
+++ b/src/public/css/item-list.css
@@ -31,6 +31,8 @@
     font-size: 16px;
     font-weight: 600;
     cursor: pointer;
+    text-decoration: none;
+    color: #C4C4C4;
 }
 
 .tab.active {
