--- a/src/public/css/item-list.css
+++ b/src/public/css/item-list.css
@@ -13,7 +13,7 @@
 .item-list__tabs-wrapper {
     width: 100%;
     margin-top: 30px;
-    border-bottom: 3px solid #C4C4C4;
+    border-bottom: 3px solid #E6E6E6;
 }
 
 .item-list__tabs {
@@ -58,7 +58,8 @@
 .item-card__image {
     width: 100%;
     padding-top: 100%;
-    background-color: #C4C4C4;
+    height: 250px;
+    background-color: #E6E6E6;
     border-radius: 8px;
     position: relative;
 }
