--- a/src/public/css/auth.css
+++ b/src/public/css/auth.css
@@ -106,6 +106,9 @@
 }
 
 .auth--verify .auth__button {
+    text-decoration: none;
+    color: #333;
+    border: none;
     background: #E0E0E0;
     border: 1px solid #000;
     padding: 10px 20px;
@@ -125,3 +128,4 @@
     flex-direction: column;
     align-items: center;
 }
+
