--- a/src/public/css/mypage.css
+++ b/src/public/css/mypage.css
@@ -236,4 +236,16 @@
     color: #666;
     font-size: 16px;
 }
+/* 成功メッセージ */
+.alert {
+    padding: 12px 16px;
+    margin: 16px 0;
+    border-radius: 4px;
+    font-size: 14px;
+}
 
+.alert-success {
+    background-color: #e6f4ea;
+    color: #276749;
+    border: 1px solid #9ae6b4;
+}
