--- a/src/public/css/auth.css
+++ b/src/public/css/auth.css
@@ -37,29 +37,6 @@
     opacity: 0.7;
 }
 
-.form-group {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 4px;
-    margin-bottom: 30px;
-}
-
-.form-label {
-    font-size: 18px;
-    color: #444;
-    font-weight: 600;
-    margin-bottom: 0;
-}
-
-.form-input {
-    width: 100%;
-    padding: 12px 14px;
-    border: 1px solid #C4C4C4;
-    border-radius: 4px;
-    font-size: 14px;
-}
-
 .auth__submit {
     width: 100%;
     background: #FF4F5E;
@@ -69,13 +46,6 @@
     border-radius: 4px;
     font-weight: 600;
     margin: 14px 0;
-}
-
-.auth-wrapper--login {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 70vh;
 }
 
 .auth--login .auth__submit {
@@ -111,10 +81,6 @@
     margin-bottom: 16px;
 }
 
-.auth--verify {
-    margin-top: -60px;
-}
-
 .auth--verify form {
     display: flex;
     flex-direction: column;
@@ -129,7 +95,7 @@
     margin-top: 20px;
 }
 
-.auth__verify-actions .auth_button {
+.auth__verify-actions .auth__button {
     order: 1;
 }
 
