--- a/src/public/css/purchase.css
+++ b/src/public/css/purchase.css
@@ -36,7 +36,7 @@
     gap: 8px;
 }
 
-.item__card-sold {
+.item__card--sold {
     position: absolute;
     top: 8px;
     left: 8px;
@@ -96,14 +96,14 @@
     margin-bottom: 20px;
 }
 
-.purchase__address-label {
+.purchase__address--label {
     font-weight: 600;
     font-size: 18px;
     margin-left: 20px;
     margin-bottom: 8px;
 }
 
-.purchase__address-edit {
+.purchase__address--edit {
     display: inline-block;
     color: #0073CC;
     font-size: 14px;
@@ -140,32 +140,32 @@
     background: #fff;
 }
 
-.purchase__summary-row {
+.purchase__summary--row {
     display: flex;
     justify-content: space-between;
     padding: 6px 16px;
     border-bottom: 1px solid #333;
 }
 
-.purchase__summary-row:last-child {
+.purchase__summary--row:last-child {
     border-bottom: none;
 }
 
-.purchase__summary-label {
+.purchase__summary--label {
     margin-top: 22px;
     font-size: 16px;
 }
 
-.purchase__summary-price {
+.purchase__summary--price {
     font-size: 20px;
     margin-bottom: 16px;
 }
 
-.purchase__summary-method {
+.purchase__summary--method {
     font-size: 20px;
 }
 
-.purchase__address-header {
+.purchase__address--header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -177,19 +177,19 @@
     padding-bottom: 20px;
 }
 
-.purchase__address-box {
+.purchase__address--box {
     margin-left: 100px;
     line-height: 1.5;
 }
 
-.purchase__address-box p {
+.purchase__address--box p {
     margin-bottom: 4px;
     font-weight: 600;
 }
 
-.purchase__address-postal,
-.purchase__address-address,
-.purchase__address-building{
+.purchase__address--postal,
+.purchase__address--address,
+.purchase__address--building{
     margin: 0;
 }
 
@@ -213,20 +213,20 @@
     min-height: calc(100vh - 120px);
 }
 
-.purchase__success-box {
+.purchase__success--box {
     text-align: center;
 }
 
-.purchase__success-title {
+.purchase__success--title {
     font-size: 24px;
     margin-bottom: 16px;
 }
 
-.purchase__success-text {
+.purchase__success--text {
     margin-bottom: 24px;
 }
 
-.purchase__success-button {
+.purchase__success--button {
     display: inline-block;
     padding: 10px 24px;
     background-color: #000;
