--- a/src/public/css/form.css
+++ b/src/public/css/form.css
@@ -4,7 +4,7 @@
     margin-top: 4px;
 }
 
-.form-group {
+.form__group {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -12,14 +12,14 @@
     margin-bottom: 30px;
 }
 
-.form-label {
+.form__label {
     font-size: 18px;
     color: #444;
     font-weight: 600;
     margin-bottom: 0;
 }
 
-.form-input {
+.form__input {
     width: 100%;
     padding: 12px 14px;
     border: 1px solid #C4C4C4;
@@ -27,15 +27,7 @@
     font-size: 14px;
 }
 
-.alert {
-    padding: 12px 16px;
-    margin: 16px 0;
-    border-radius: 4px;
-    font-size: 14px;
-}
-
-.alert-success {
-    background-color: #e6f4ea;
-    color: #276749;
-    border: 1px solid #9ae6b4;
+.form__input--textarea {
+    height: 120px;
+    resize: none;
 }
