認証・出品バリデーションとエラーメッセージを要件通りに調整

--- a/src/public/css/item-detail.css
+++ b/src/public/css/item-detail.css
@@ -292,3 +292,8 @@
 .item-detail__notice--own {
     color: #999;
 }
+
+.item-detail__favorite-btn:disabled {
+    opacity: 0.4;
+    cursor: not-allowed;
+}
