--- a/src/public/css/item-list.css
+++ b/src/public/css/item-list.css
@@ -75,6 +75,12 @@
     color: #333;
 }
 
+.item-card__link.disabled {
+    pointer-events: none;
+    opacity: 0.5;
+    cursor: default;
+}
+
 .item-card__link {
     display: block;
     text-decoration: none;
